--- a/app.main/src/main/res/values/strings.xml
+++ b/app.main/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">app.main</string>
+    <string name="app_name">App.Main</string>
     <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
